SAK-16866  - avoid scrollbars in tool when user created content includes an list of any type.
git-svn-id: https://source.sakaiproject.org/svn/rwiki/branches/SAK-16866@66727 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
+++ b/rwiki-tool/tool/src/webapp/styles/wikiStyle.css
@@ -802,6 +802,7 @@ h6 {
 	list-style-type: none
 }
 /* wiki lists */
+ul {padding:.5em;list-style-position:inside;}
 ul.minus { list-style-type: square }
 ul.star { list-style-type: circle }
 ol.roman { list-style-type: lower-roman }
